[package]
name = "orangebox"
version = "0.0.1"
authors = ["Anatolii Smolianinov <zarkonesmall@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "stream"] }
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13.4"
base64 = "0.11.0"
serde = { version = "1.0.104", features = ["derive"] }
zip = "0.5.5"
futures-util = "0.3.4"
bytes = "0.5.4"
env_logger = "0.7.1"
